<resources>
    <string name="app_name">Jokenpo ICI</string>
    <string name="jokenpo">Jokenpo</string>
    <string name="by_ici">By ICI</string>
    <string name="name_nickname">Name ou Apelido</string>
    <string name="name">Nome</string>
    <string name="login">Login</string>
    <string name="name_is_mandatory">É necessário preencher o campo nome</string>
    <string name="opponent">Oponente</string>
    <string name="player">Jogador</string>
    <string name="scissor">Tesoura</string>
    <string name="paper">Papel</string>
    <string name="rock">Pedra</string>
    <string name="playButton">Jogar</string>
    <string name="vs">VS</string>
    <string name="logout">Logout</string>
    <string name="select_weapon">Selecione uma arma</string>
    <string name="ok">OK</string>
    <string name="result">Resultado:</string>
    <string name="statistics">Estatísticas</string>
    <string name="win_ratio">Porcentagem de Vitórias:</string>
    <string name="total_draws">Empates totais:</string>
    <string name="total_losses">Derrotas totais:</string>
    <string name="total_wins">Vitórias totais:</string>
    <string name="games_played">Partidas disputadas:</string>
    <string name="wipe_data">Apagar dados</string>
    <string name="new_game">Nova Partida</string>
</resources>