<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="br.org.curitiba.ici.avaliacao.game.entities.Weapon"/>

        <variable
            name="viewModel"
            type="br.org.curitiba.ici.avaliacao.game.GameViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".game.GameActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/opponentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/shojumaru"
            android:text="@string/opponent"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

        <ImageView
            android:id="@+id/opponentImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/samurai"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/opponentTextView"
            app:layout_constraintStart_toStartOf="@+id/opponentTextView"
            app:layout_constraintTop_toBottomOf="@+id/opponentTextView" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.70" />

        <TextView
            android:id="@+id/playerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/shojumaru"
            android:text="@string/player"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/playerImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/tesoura"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/playerTextView"
            app:layout_constraintEnd_toEndOf="@+id/playerTextView"
            app:layout_constraintStart_toStartOf="@+id/playerTextView" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline">

            <RadioButton
                android:id="@+id/radio_rock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.setPlayerWeapon(Weapon.ROCK)}"
                android:button="@null"
                android:drawableBottom="?android:attr/listChoiceIndicatorSingle"
                android:fontFamily="@font/shojumaru"
                android:gravity="center_horizontal|bottom"
                android:text="@string/rock"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_paper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.setPlayerWeapon(Weapon.PAPER)}"
                android:button="@null"
                android:drawableBottom="?android:attr/listChoiceIndicatorSingle"
                android:fontFamily="@font/shojumaru"
                android:gravity="center_horizontal|bottom"
                android:text="@string/paper"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_scissor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.setPlayerWeapon(Weapon.SCISSOR)}"
                android:button="@null"
                android:drawableBottom="?android:attr/listChoiceIndicatorSingle"
                android:fontFamily="@font/shojumaru"
                android:gravity="center_horizontal|bottom"
                android:text="@string/scissor"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </RadioGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:onClick="@{() -> viewModel.play()}"
            android:text="@string/playButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group" />

        <TextView
            android:id="@+id/vsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/shojumaru"
            android:text="@string/vs"
            app:layout_constraintBottom_toTopOf="@+id/playerImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/opponentImage" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>